--- a/google-cloud/package.json
+++ b/google-cloud/package.json
@@ -1,15 +1,19 @@
 {
   "name": "cloud-node-physicalwebimages",
   "version": "0.0.1",
-  "description": "node.js: Build a Web App using Google Cloud Platform",
+  "description": "physicalweb_images_gcloud",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/googlesamples/io2015-codelabs.git"
+    "url": "git+https://github.com/AlexEBall/physicalWebMuseum.git"
   },
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "ava system-test/*.test.js -T 30s"
+  },
+  "engines": {
+    "node": ">=4.3.2"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -20,22 +24,32 @@
     "format": "^0.2.2",
     "fs": "0.0.1-security",
     "google-cloud": "^0.48.0",
+    "gtoken": "^2.0.1",
+    "jws": "^3.1.4",
     "multer": "^0.1.8",
     "url": "^0.11.0",
     "util": "^0.10.3"
   },
-  "bugs": {
-    "url": "https://github.com/googlesamples/io2015-codelabs/issues"
+  "devDependencies": {
+    "@google-cloud/nodejs-repo-tools": "1.4.17",
+    "ava": "0.22.0"
   },
-  "homepage": "https://github.com/googlesamples/io2015-codelabs#readme",
-  "devDependencies": {},
-  "keywords": [
-    "physicalweb",
-    "images",
-    "google",
-    "cloud",
-    "node",
-    "project"
-  ],
-  "author": "MJOAN"
+  "cloud-repo-tools": {
+    "requiresProjectId": true,
+    "requiresKeyFile": true,
+    "test": {
+      "app": {
+        "requiredEnvVars": [
+          "GCLOUD_STORAGE_BUCKET"
+        ],
+        "msg": "<input type=\"file\" name=\"file\">",
+        "substitutions": "physicalwebimages=$GCLOUD_STORAGE_BUCKET"
+      },
+      "build": {
+        "requiredEnvVars": [
+          "GCLOUD_STORAGE_BUCKET"
+        ]
+      }
+    }
+  }
 }
