got twitter to work, deleted some folders, made our model into an object

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
     "path": "^0.12.7",
-    "sequelize": "^4.23.0"
+    "sequelize": "^4.23.0",
+    "twitter": "^1.7.1"
   }
 }
