--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
-    "path": "^0.12.7",
-    "sequelize": "^4.25.1",
-    "twitter": "^1.7.1"
+    "sequelize": "^4.25.1"
   }
 }
