--- a/package.json
+++ b/package.json
@@ -18,11 +18,27 @@
   },
   "homepage": "https://github.com/AlexEBall/physicalWebMuseum#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "html": "^1.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.25.1"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "physical",
+    "web",
+    "museum",
+    "application",
+    "beacon"
+  ]
 }
