--- a/config/config.json
+++ b/config/config.json
@@ -14,6 +14,11 @@
     "dialect": "mysql"
   },
   "production": {
+    "use_env_variable": "JAWSDB_URL",
+    "username": "q0y4mw73r36vfvys",
+    "password": "y999sabg6fg8xchu",
+    "database":"zan01axlmt6sy51j",
+    "host:": "q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
