--- a/config/config.json
+++ b/config/config.json
@@ -14,9 +14,14 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL"
-  }
-}
+    "use_env_variable": "JAWSDB_URL",
+    "username": "",
+    "password": null,
+    "database": "",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+    }
+ }
 
 
 
