db changes for heroku

--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql",
     "username": "q0y4mw73r36vfvys",
-    "password": "y999sabg6fg8xchu",
+    "password": "x4mpjq0aawqbt2ag",
     "database": "zan01axlmt6sy51j",
     "host": "q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com"
   }
